Fixed overlapped features of CategoryComponent and updateNote with subjectTabs

--- a/3380 Project/src/CSS Files/updateNotes.css
+++ b/3380 Project/src/CSS Files/updateNotes.css
@@ -19,48 +19,6 @@
   width: 100%;
   grid-area: main;
 }
-.modal-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.popup-form {
-  padding: 20px;
-  background: white;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  display: auto;
-  flex-direction: column;
-}
-
-textarea {
-  margin-bottom: 10px;
-  width: 100%;
-  height: 150px;
-  font-family: "Montserrat", sans-serif;
-}
-button {
-  padding: 10px;
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  border: 0;
-  outline: none;
-  display: inline-block;
-  border-radius: 10px;
-  background-color: blue;
-  cursor: pointer;
-  font-weight: 10;
-  margin: 10px;
-}
-
 table {
   width: 96%;
   cursor: pointer;
@@ -97,6 +55,8 @@ table {
 }
 
 .dropdown_select {
+  width: 100%; 
+  padding: 5px 8px; 
   width: 100%; 
   padding: 5px 8px; 
   background-color: #1a33c2;
@@ -179,6 +139,7 @@ table {
 .pagination {
   background-color: #f3f4f6;
   padding: 8px 0px;
+  width: 96%;
   width: 96%;
   font-weight: 500;
   font-size: 16px;
